syntax = "proto3";

option csharp_namespace = "CrudClient.Grpc.OrderItemService";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


package orderItem;

service OrderItemService{
	rpc GetListOrder(google.protobuf.Empty)returns(ListOrderItemReply);
	rpc GetListOrderItemsByOrderId(GetListOrderItemsByOrderIdRequest)returns(ListOrderItemReply);
	rpc CreateOrderItem(CreateOrderItemReques)returns(OrderItemReply);
	rpc UpdateOrderItem(UpdateOrderItemReques)returns(OrderItemReply);
	rpc DeleteOrderItem(DeleteOrderItemReques)returns(google.protobuf.BoolValue);
}
message GetListOrderItemsByOrderIdRequest{
	int32 id = 1;
}
message OrderItemReply{
	int32 id = 1;
	int32 order = 2;
	string name = 3;
	DecimalValue quantity =4;
	string unit =5;
}

message CreateOrderItemReques{
	int32 order = 1;
	string name = 2;
	DecimalValue quantity =3;
	string unit =4;
}
message UpdateOrderItemReques{
	int32 id = 1;
	string name = 2;
	DecimalValue quantity =3;
	string unit =4;
}
message DeleteOrderItemReques{
	int32 id =1;
}

message ListOrderItemReply{
	repeated OrderItemReply order =1;
}

message DecimalValue{
	int64 units =1;
	sfixed32 nanos =2;
}
