syntax = "proto3";

option csharp_namespace = "ItemManagementSystem.Grpc.Order";
import "google/protobuf/empty.proto";

package orderItem;

service OrderService{
	rpc GetOrder(GetOrder)returns(OrderReply);
	rpc GerListOrder(google.protobuf.Empty)returns(ListOrderReply);
}
message GetOrderRequest{
	int32 id =1;
}

message OrderReply{
	int32 id =1;
	int32 idOrder = 2;
}

message ListOrderReply{
	repeated OrderReply order = 1;
}
